--- a/tools/tex/tasks.vs.json
+++ b/tools/tex/tasks.vs.json
@@ -2,7 +2,7 @@
   "version": "0.2.1",
   "tasks": [
     {
-      "taskLabel": "pdfLatex",
+      "taskLabel": "xeLatex",
       "appliesTo": "*.tex",
       "type": "default",
       "command": "xelatex",
